Fix notification not showing issue - Issue ID #84

--- a/components/device-mgt/org.wso2.carbon.device.mgt.ui/src/main/resources/jaggeryapps/uuf-template-app/app/units/uuf.unit.theme/public/css/theme-wso2.css
+++ b/components/device-mgt/org.wso2.carbon.device.mgt.ui/src/main/resources/jaggeryapps/uuf-template-app/app/units/uuf.unit.theme/public/css/theme-wso2.css
@@ -7353,7 +7353,7 @@ body.inverse .fade-edge:after {
   height: 100%;
   overflow-y: auto;
   background: #FFFFFF;
-  color: #ffffff;
+  color: rgba(0,0,0, 0.65);
   -webkit-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
